--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a target="_blank" class="navbar-brand" href="https://github.com/JohnPH75"><img src="images/A1.png" alt="logo">         <img src="images/logo.png" alt="logo"></a>
+                    <a target="_blank" class="navbar-brand" href="https://github.com/JohnPH75"><img src="images/logo.png" alt="logo"></a>
                 </div>
 				
                 <div class="collapse navbar-collapse navbar-right">
