--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                         <img class="img-responsive" src="images/portfolio/recent/item1.png" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">Shopping List App</a> </h3>
-                                <p>A simple design that lets you input items, check them off and delete them.  Please look for it on the portfolio drop down menu on top. </p>
+                                <h3><a target="_blank" href="http://johnph75.github.io/shopping-list/">Shopping List App</a> </h3>
+                                <p>A simple design that lets you input items, check items off and delete them.</p>
                                 <a class="preview" href="images/portfolio/full/item1.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
@@ -224,8 +224,8 @@
                         <img class="img-responsive" src="images/portfolio/recent/item2.png" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">Hot or Cold Game</a></h3>
-                                <p>A game that lets you guess a number the computer has chosen. You can find it on the portfolio drop down menu on top.</p>
+                                <h3><a target="_blank" href="http://johnph75.github.io/hot-or-cold/">Hot or Cold Game</a></h3>
+                                <p>A game that lets you guess a number the computer has randomly chosen. </p>
                                 <a class="preview" href="images/portfolio/full/item2.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
@@ -237,8 +237,8 @@
                         <img class="img-responsive" src="images/portfolio/recent/item3.png" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">Zipcode Locator </a></h3>
-                                <p>I makes use of the Ziptastic API.  Input zipcode and you will be given that location.  Please try it on the portfolio drop down menu on top.</p>
+                                <h3><a target="_blank" href="http://johnph75.github.io/ziptastic-API-hack/">Zipcode Locator </a></h3>
+                                <p>This makes use of the Ziptastic API.  Input a zipcode and you will be given the location.</p>
                                 <a class="preview" href="images/portfolio/full/item3.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
@@ -250,7 +250,7 @@
                         <img class="img-responsive" src="images/portfolio/recent/item4.png" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">More to come... </a></h3>
+                                <h3><a target="_blank" href="https://github.com/JohnPH75">More to come... </a></h3>
                                 <p>There's always more where that came from.</p>
                                 <a class="preview" href="images/portfolio/full/item4.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
