--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                             </div>
 
                             <div class="col-sm-6 hidden-xs animation animated-item-4">
-                                <div class="slider-img">
+                                <!-- <div class="slider-img">
                                     <img src="images/slider/img1.png" class="img-responsive">
-                                </div>
+                                </div> -->
                             </div>
 
                         </div>
@@ -100,9 +100,9 @@
                             </div>
 
                             <div class="col-sm-6 hidden-xs animation animated-item-4">
-                                <div class="slider-img">
+                               <!--  <div class="slider-img">
                                     <img src="images/slider/img2.png" class="img-responsive">
-                                </div>
+                                </div> -->
                             </div>
 
                         </div>
@@ -120,9 +120,9 @@
                                 </div>
                             </div>
                             <div class="col-sm-6 hidden-xs animation animated-item-4">
-                                <div class="slider-img">
+                               <!--  <div class="slider-img">
                                     <img src="images/slider/img3.png" class="img-responsive">
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
