--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="p:domain_verify" content="be43ebb4d2b48674e283b7a1b847fe05"/>
     <title>JPH Designs</title>
 	
 	<!-- core CSS -->
