--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <li><a target="_blank" href="http://johnph75.github.io/shopping-list/">Shopping List</a></li>
                                 <li><a target="_blank" href="http://johnph75.github.io/hot-or-cold/">Hot or Cold</a></li>
                                 <li><a target="_blank" href="http://johnph75.github.io/ziptastic-API-hack/">Zipcode Locator</a></li>
-                                 <li><a target="_blank" href="pingpong.html">Ping Pong</a></li>
+                                 <li><a target="_blank" href="2048.html">2048</a></li>
                             </ul>
                         </li>
                         <li><a target="_blank" href="https://dajjay.wordpress.com/">Blog</a></li>
