--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                                 <li><a target="_blank" href="http://johnph75.github.io/shopping-list/">Shopping List</a></li>
                                 <li><a target="_blank" href="http://johnph75.github.io/hot-or-cold/">Hot or Cold</a></li>
                                 <li><a target="_blank" href="http://johnph75.github.io/ziptastic-API-hack/">Zipcode Locator</a></li>
-                                <li><a target="_blank" href="2048.html">2048</a></li>
+                                <li><a target="_blank" href="2048.html">2048 Clone</a></li>
                                 <li><a target="_blank" href="list.html">Things To Do</a></li>
-                                <li><a target="_blank" href="tetris.html">Tetris</a></li>
+                                <li><a target="_blank" href="tetris.html">Tetris Clone</a></li>
                                 <li><a target="_blank" href="jewels.html">Jewel Game</a></li>
                                 
                             </ul>
@@ -249,16 +249,68 @@
                             </div> 
                         </div>
                     </div>
-                </div>   
+                </div>
 
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <div class="recent-work-wrap">
                         <img class="img-responsive" src="images/portfolio/recent/item4.png" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
+                                <h3><a target="_blank" href="2048.html">2048 Clone </a></h3>
+                                <p>Join the same tiles together to reach the 2048th tile.</p>
+                                <a class="preview" href="images/portfolio/full/item4.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                            </div> 
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <div class="recent-work-wrap">
+                        <img class="img-responsive" src="images/portfolio/recent/item5.png" alt="">
+                        <div class="overlay">
+                            <div class="recent-work-inner">
+                                <h3><a target="_blank" href="list.html">Things To Do </a></h3>
+                                <p>Simple to do list. Input, cross out and delete items.</p>
+                                <a class="preview" href="images/portfolio/full/item5.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                            </div> 
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <div class="recent-work-wrap">
+                        <img class="img-responsive" src="images/portfolio/recent/item6.png" alt="">
+                        <div class="overlay">
+                            <div class="recent-work-inner">
+                                <h3><a target="_blank" href="tetris.html">Tetris Clone </a></h3>
+                                <p>Clone of the classic Tetris game.</p>
+                                <a class="preview" href="images/portfolio/full/item6.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                            </div> 
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <div class="recent-work-wrap">
+                        <img class="img-responsive" src="images/portfolio/recent/item7.png" alt="">
+                        <div class="overlay">
+                            <div class="recent-work-inner">
+                                <h3><a target="_blank" href="jewels.html">Jewel Game </a></h3>
+                                <p>Bejeweled clone.  Match the gems together.</p>
+                                <a class="preview" href="images/portfolio/full/item7.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                            </div> 
+                        </div>
+                    </div>
+                </div>   
+
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <div class="recent-work-wrap">
+                        <img class="img-responsive" src="images/portfolio/recent/item8.png" alt="">
+                        <div class="overlay">
+                            <div class="recent-work-inner">
                                 <h3><a target="_blank" href="https://github.com/JohnPH75">More to come... </a></h3>
                                 <p>There's always more where that came from.</p>
-                                <a class="preview" href="images/portfolio/full/item4.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                <a class="preview" href="images/portfolio/full/item8.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
                     </div>
