--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                                 <li><a target="_blank" href="list.html">Things To Do</a></li>
                                 <li><a target="_blank" href="tetris.html">Tetris Clone</a></li>
                                 <li><a target="_blank" href="jewels.html">Jewel Game</a></li>
+
+                                <li><a target="_blank" href="loopybird.html">Loopy Bird</a></li>
                                 
                             </ul>
                         </li>
@@ -301,16 +303,29 @@
                             </div> 
                         </div>
                     </div>
-                </div>   
+                </div>
 
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <div class="recent-work-wrap">
                         <img class="img-responsive" src="images/portfolio/recent/item8.png" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
+                                <h3><a target="_blank" href="loopybird.html">Loopy Bird </a></h3>
+                                <p>Flappy Bird clone.  Tap and fly.</p>
+                                <a class="preview" href="images/portfolio/full/item8.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                            </div> 
+                        </div>
+                    </div>
+                </div>    
+
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <div class="recent-work-wrap">
+                        <img class="img-responsive" src="images/portfolio/recent/item9.png" alt="">
+                        <div class="overlay">
+                            <div class="recent-work-inner">
                                 <h3><a target="_blank" href="https://github.com/JohnPH75">More to come... </a></h3>
                                 <p>There's always more where that came from.</p>
-                                <a class="preview" href="images/portfolio/full/item8.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                <a class="preview" href="images/portfolio/full/item9.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
                     </div>
