--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                             </ul>
                         </li>
                         <li><a target="_blank" href="https://dajjay.wordpress.com/">Blog</a></li>
+
+                        <li><a href="contact-us.html">Contact</a></li>
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -108,9 +110,9 @@
                             </div>
 
                             <div class="col-sm-6 hidden-xs animation animated-item-4">
-                                <div class="slider-img">
+                                <!-- <div class="slider-img">
                                     <img src="images/slider/img2.png" class="img-responsive">
-                                </div>
+                                </div> -->
                             </div>
 
                         </div>
@@ -128,9 +130,9 @@
                                 </div>
                             </div>
                             <div class="col-sm-6 hidden-xs animation animated-item-4">
-                                <div class="slider-img">
+                                <!-- <div class="slider-img">
                                     <img src="images/slider/img3.png" class="img-responsive">
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
