--- a/contact-us.html
+++ b/contact-us.html
@@ -68,8 +68,8 @@
 
     <section id="contact-info">
         <div class="center">                
-            <h2>Please Contact Me</h2>
-            <p class="lead">If you need a custom designed website, I will develop and design a site that embodies your vision.</p>
+            <h2>Contact Us</h2>
+            <h3>If you need a custom designed website, I will develop and design a site that embodies your vision.</h3>
         </div>
         <div class="gmap-area">
             <div class="container">
