--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@
     <section id="partner">
         <div class="container">
             <div class="center wow fadeInDown">
-                <h2>Languages Learned</h2>
-                <p class="lead">HTML - The Skeleton <br> CSS - The Skin <br> Javascript - The Soul</p>
+                <h2>JPH Designs</h2>
+                <h3 class="lead">Please contact us if you would like a website custom made for you. <br> We specialize in graphic and web design and can handle all aspects of web development, utilizing the latest technologies in HTML, CSS, and Javascript. </h3>
             </div>    
 
             <div class="partners">
