--- a/contact-us.html
+++ b/contact-us.html
@@ -58,7 +58,7 @@
                                 
                             </ul>
                         </li>
-                        <li><a target="_blank" href="https://dajjay.wordpress.com/">Blog</a></li> 
+                       <!--  <li><a target="_blank" href="https://dajjay.wordpress.com/">Blog</a></li>  -->
                         <li class="active"><a href="contact-us.html">Contact</a></li>                        
                     </ul>
                 </div>
