--- a/contact-us.html
+++ b/contact-us.html
@@ -144,7 +144,7 @@
                             <ul class="social-share">
                                 <li><a target="_blank" href="https://plus.google.com/"><i class="fa fa-google-plus"></i></a></li>
                                 <li><a target="_blank" href="https://www.pinterest.com/JohnPH75/"><i class="fa fa-pinterest"></i></a></li>
-                               <!--  <li><a href="#"><i class="fa fa-codepen"></i></a></li> 
+                               <!--  <li><a href="#"><i class="fa fa-wordpress"></i></a></li> 
                                 <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
                                 <li><a target="_blank" href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8" id="search"><i class="fa fa-search"></i></a></li>
                             </ul>
